--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,14 @@
 *.class
 
 # generated files
-bin/
-gen/
+library/bin/
+library/gen/
+sample/bin/
+sample/gen/
+library/out/
+sample/out/
+library/.idea/
+sample/.idea/
 
 # Local configuration file (sdk path, etc)
 local.properties
