--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+            android:icon="@drawable/ic_launcher">
         <activity
                 android:name="SampleActivity"
                 android:label="@string/app_name">
