--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,4 @@
-# built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
-*.class
-
-# generated files
-library/bin/
-library/gen/
-sample/bin/
-sample/gen/
-library/out/
-sample/out/
-library/.idea/
-sample/.idea/
-
-# Local configuration file (sdk path, etc)
+*.iml
+.gradle
+.idea
 local.properties
-
-# Eclipse project files
-.classpath
-.project
-/.idea/workspace.xml
