--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 30 16:36:19 BST 2014
+#Sun Feb 16 13:39:45 GMT 2014
 sdk.dir=/Users/rock3r/android-sdk-macosx
+keystore.props.file=../keystore.properties
