--- a/GlowPadBackport-sample/src/main/AndroidManifest.xml
+++ b/GlowPadBackport-sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.sebastianopoggi.samples.ui.GlowPadSample">
+          package="net.frakbot.glowpadbackportsample">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
 
@@ -10,17 +10,12 @@
             android:allowBackup="false">
 
         <activity
-                android:name="net.sebastianopoggi.ui.GlowPadBackportSample.SampleActivity"/>
-
-        <activity-alias
-                android:name="net.sebastianopoggi.samples.ui.GlowPadSample.SampleActivity"
-                android:targetActivity="net.sebastianopoggi.ui.GlowPadBackportSample.SampleActivity"
-                android:label="@string/app_name">
+                android:name=".SampleActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity-alias>
+        </activity>
     </application>
 </manifest> 
