--- a/maven_push.gradle
+++ b/maven_push.gradle
@@ -108,6 +108,6 @@ afterEvaluate { project ->
 
     artifacts {
         archives androidSourcesJar
-        archives androidJavadocsJar
+        //archives androidJavadocsJar
     }
 }
