--- a/GlowPadBackport/build.gradle
+++ b/GlowPadBackport/build.gradle
@@ -1,13 +1,12 @@
-apply plugin: 'android-library'
-apply from: '../maven_push.gradle'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         minSdkVersion 4
-        targetSdkVersion 19
+        targetSdkVersion 22
 
         versionName VERSION_NAME
         versionCode Integer.parseInt(VERSION_CODE)
@@ -34,14 +33,14 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), file('proguard-rules.txt')
             signingConfig signingConfigs.release
         }
 
         publicBeta.initWith(buildTypes.release)
         publicBeta {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), file('proguard-rules.txt')
             versionNameSuffix " " + VERSION_BETANUMBER
         }
@@ -49,7 +48,7 @@ android {
         publicDebug.initWith(buildTypes.publicBeta)
         publicDebug {
             debuggable true
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), file('proguard-rules.txt')
             versionNameSuffix " Debug " + VERSION_BETANUMBER
         }
