Rename modules and package names
The modules are now called lib and app, and all capital letters have
been taken out package names (well, directories only, the packages were
already lowercase).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:allowBackup="false">
 
         <activity
-                android:name=".SampleActivity">
+                android:name="net.frakbot.glowpadbackport.sample.SampleActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
