--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'bintray-release'
 
 android {
     compileSdkVersion 22
@@ -57,4 +58,14 @@ android {
 
 dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
+}
+
+publish {
+    userOrg = POM_DEVELOPER_ID
+    groupId = GROUP_ID
+    artifactId = ARTIFACT_ID
+    publishVersion = VERSION_NAME
+    uploadName = UPLOAD_NAME
+    description = POM_DESCRIPTION
+    website = POM_URL
 }
